--- a/docs/ESP32-S3-DevKitC-1_44Pin/ESP32-S3-DevKitC-1_44Pin-Preview.css
+++ b/docs/ESP32-S3-DevKitC-1_44Pin/ESP32-S3-DevKitC-1_44Pin-Preview.css
@@ -1,7 +1,11 @@
+#preview-pins ul {
+  padding-top: 0px;
+  padding-bottom: 5px;
+}
 #preview-pins ul li {
   padding: 0 6px;
-  height: 21.9px;
-  line-height: 21.9px;
+  height: 21.8px;
+  line-height: 21.8px;
 }
 #preview-pins-center {
   width: 220px;
