C3 Mini V1 & 2 fixed, Various Pins.js files fixed, and more...

--- a/docs/ESP32-C3-Mini_V2/ESP32-C3-Mini_V2-Preview.css
+++ b/docs/ESP32-C3-Mini_V2/ESP32-C3-Mini_V2-Preview.css
@@ -10,7 +10,7 @@
 #preview-pins-center {
   width: 444px;
   height: 600px;
-  background: #000 url(ESP32-C3-Mini-Preview.png) center center no-repeat;
+  background: #000 url(ESP32-C3-Mini_V2-Preview.png) center center no-repeat;
 }
 .preview-pin {
   line-height: 22px;
